# dmi-diff

./: .gitignore  Cargo.toml  LICENSE  build.sh  test.js
src/: dmi.rs  lib.rs  util.rs
