[package]
name = "dmi-diff"
version = "0.1.0"
authors = ["mochi <shenesis@gmail.com>"]
edition = "2018"
description = "Node.js adddon to generate diffs from BYOND .dmi files"
readme = "README.md"
repository = "https://github.com/dearmochi/dmi-diff"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nodejs-sys = "0.4.1"
sha1 = "0.6.0"
futures = "0.3.5"
byteorder = "1.3.4"
miniz_oxide = "0.4.0"
